--- a/anime_page/style.css
+++ b/anime_page/style.css
@@ -12,6 +12,7 @@ header {
     padding: 15px;
     text-align: center;
     border-bottom: 2px solid black;
+    font-size: 30px;
 }
 
 /* grid de produtos */
@@ -27,42 +28,43 @@ header {
 }
 
 .card {
-    width: 22%;
+    width: 31%;
     display: inline-block;
     margin: 1% 1%;
-    padding: 10px;
+    padding: 15px;
+    font-size: 30px;
 }
 
 .product-image {
     height: 300px;
-    width: 100%;
+    width: 50%;
     margin-bottom: 10px;
     background-position: center;
     background-size: cover;
 }
 
 #img-1 {
-    background-image: url('../img/naruto.jfif');
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGXgo0Tr7S9Mm3VQAT8iTE1Kk25iRN3whUxA&usqp=CAU');
 }
 
 #img-2 {
-    background-image: url('../img/aot.jfif');
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2MN0OJAqUQ0JjfoV8CS2TlfnUJxT0N5MoCQ&usqp=CAU');
 }
 
 #img-3 {
-    background-image: url('../img/blue\ lock.jfif');
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSm4PVm-EUHsSu40Sit7uZkIWIsQPra0GChjBpk16nKf5vZX0v5XFjTFymgwLNHCElMh-E&usqp=CAU');
 }
 
 #img-4 {
-    background-image: url('../img/chainsaw.jfif');
-}
-
-#img-4 {
-    background-image: url('../img/one\ piece.png');
+    background-image: url('https://i.pinimg.com/736x/a6/f8/97/a6f897d15ab025e7bd6111f012a45729.jpg');
 }
 
 #img-5 {
-    background-image: url('../img/solo\ leveling.jfif');
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSn-X9xdKzjxvtkKxYQxAqujKvjyyg-7Hp6cg&usqp=CAU');
+}
+
+#img-6 {
+    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRhPzjlFPj_dDrWkt8H07xYTey8wlaVEirezw&usqp=CAU')
 }
 
 /* footer */
@@ -72,4 +74,5 @@ footer {
     padding: 80px;
     text-align: center;
     border-top: 2px solid black;
+    font-size: 30px;
 }
